Added link to De readme

--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -2,9 +2,8 @@ name: Translate README
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: ['*']
+
 jobs:
   build:
     runs-on: ubuntu-latest
