--- a/.github/workflows/deploy-api-docs.yml
+++ b/.github/workflows/deploy-api-docs.yml
@@ -29,7 +29,5 @@ jobs:
         run: mkdocs build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
-          publish_dir: docs/api-reference
+        run: mkdocs gh-deploy --force
+
