--- a/.github/workflows/deploy-api-docs.yml
+++ b/.github/workflows/deploy-api-docs.yml
@@ -23,5 +23,5 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material
-      - run: pip install mkdocstrings
+      - run: pip install mkdocstrings[python]
       - run: mkdocs gh-deploy --force
