add directive to include stub files (#313)
* add directive to include stub files

* add manifest file

* Fix missing stub

---------

Co-authored-by: Dominastorm <dchawla228@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,7 @@ test = [
 
 [tools.setuptools]
 packages = ["uptrain"]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["*.pyi"]
