--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "pyarrow>=10.0.0",
     "plotly>=5.0.0",
     "streamlit>=1.23",
-    "httpx",
+    "httpx>=0.24",
 ]
 
 [project.urls]
