--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,18 +20,13 @@ classifiers = [
 ]
 keywords = ["uptrain", "ai", "LLM", "evaluation", "hallucinations", "observability", "response quality"]
 dependencies = [
-    "tqdm>=4.0",
     "pydantic<1.10.10",
-    "aiolimiter>=1.1",
     "loguru",
     "lazy_loader",
     "networkx",
     "polars>=0.18",
-    "deltalake>=0.9",
+    "pandas",
     "numpy>=1.23.0",
-    "pyarrow>=10.0.0",
-    "plotly>=5.0.0",
-    "streamlit>=1.23",
     "httpx>=0.24.1",
 ]
 
