--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "numpy>=1.23.0",
     "httpx>=0.24.1",
     "plotly>=5.0.0",
+    "aiolimiter>=1.1",
+    "openai==1.6.1",
 ]
 
 [project.urls]
