--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "uptrain"
-version = "0.6.2"
+version = "0.6.3"
 description = "UpTrain - tool to evaluate LLM applications on aspects like factual accuracy, response quality, retrieval quality, tonality, etc."
 readme = "README.md"
 maintainers = [{ name = "UpTrain AI Team", email = "oss@uptrain.ai" }]
@@ -30,7 +30,7 @@ dependencies = [
     "httpx>=0.24.1",
     "plotly>=5.0.0",
     "aiolimiter>=1.1",
-    "openai==1.6.1",
+    "openai>=1.6.1",
 ]
 
 [project.urls]
