--- a/uptrain/dashboard/backend/requirements.txt
+++ b/uptrain/dashboard/backend/requirements.txt
@@ -8,11 +8,9 @@ boto3
 sqlalchemy
 loguru
 httpx
-saq
 fastapi-sso @ git+https://github.com/tomasvotava/fastapi-sso.git@master
 pyjwt
 uptrain @ git+https://github.com/uptrain-ai/uptrain.git@main
-posthog
 sqlite-utils
-openai==1.6.1
-litellm==1.15.7
+openai>=1.6.1
+litellm>=1.15.7
