Disable Next.js telemetry in compose by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     restart: always
     entrypoint: ["npm", "run", "dev"]
     working_dir: "/app/"
+    environment:
+      - NEXT_TELEMETRY_DISABLED=1
     ports:
       - 3000:3000
     profiles: ["server"]
