--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,5 +55,5 @@ include-package-data = true
 [tool.setuptools.package-data]
 "*" = ["*.pyi"]
 
-[tool.setuptools.packages.find]
-include = ["uptrain"]
+#[tool.setuptools.packages.find]
+#include = ["uptrain"]
