improved pdf parsing + tutorial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,8 @@ dependencies = [
     "pyyaml",
     "json5",
     "python-docx",
-    "pypdf",
+    "pymupdf",
     "faiss-cpu",
-    "sentence_transformers"
 ]
 
 [project.urls]
